How to import BIRT code into eclipse #628
Forbidden references should not be a warning but an error.
ReportLauncherUtils failed to compile with internal API
Jetty and Lucense upgrade
Removed shady references from the updatesite pom
Moved BIRT target to latest Eclipse
Moved debug.ui to Java11
Upgrade fop to 4.6 in chart.device.pdf
Removed version constrains in features